--- a/src/css/critical.less
+++ b/src/css/critical.less
@@ -290,56 +290,57 @@
 
 /* Mobile */
 @media only screen and (min-width: 0em) {
+
     .services {
-        border-radius: 5/16rem;
+        border-radius: 5/16em;
         margin: auto;
-        margin-top: -167/16rem;
+        margin-top: -167/16em;
         position: relative;
         z-index: 100;
         background: #fff;
         width: 90%;
-        max-width: 1280/16rem;
-        padding: 50/16rem 20/16rem;
-        border-top: 6/16rem solid var(--primary);
+        max-width: 1320/16em;
+        padding: 50/16em 20/16em;
+        border-top: 6/16em solid var(--primary);
         box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-        margin-bottom: 50/16rem;
+        margin-bottom: 50/16em;
         .card {
             display: block;
             width: 100%;
-            max-width: 357/16rem;
+            max-width: 357/16em;
             margin: auto;
-            margin-bottom: 50/16rem;
+            margin-bottom: 50/16em;
             &:last-of-type {
                 margin-bottom: 0;
             }
 
             picture {
                 background: var(--primary);
-                width: 88/16rem;
-                height: 88/16rem;
+                width: 88/16em;
+                height: 88/16em;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 margin: auto;
-                margin-bottom: 23/16rem;
+                margin-bottom: 23/16em;
                 border-radius: 50%;
 
                 img {
-                    width: 48/16rem;
-                    height: 48/16rem;
+                    width: 48/16em;
+                    height: 48/16em;
                 }
             }
             h2 {
                 text-align: center;
-                font-size: 32/16rem;
-                line-height: 27/32em;
+                font-size: 32/16em;
+                line-height: 27/20em;
                 font-weight: 700;
                 color: #1a1a1a;
-                margin-bottom: 13/16rem;
+                margin-bottom: 13/20em;
             }
             p {
                 text-align: center;
-                line-height: 24/16rem;
+                line-height: 24/18em;
                 width: 100%;
                 opacity: .7;
             }
@@ -358,7 +359,7 @@
 
         .card {
             margin: 0;
-            max-width: 325/16rem;
+            max-width: 325/16em;
         }
     }
 }
@@ -366,10 +367,10 @@
 /* Large Desktop */
 @media only screen and (min-width: 1300px) {
     .services {
-        padding: 50/16em 80/16rem;
+        padding: 50/16em 80/16em;
 
         .card {
-            max-width: 320/16rem;
+            max-width: 357/16em;
         }
     }
 }
