--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -259,55 +259,55 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   .services {
-    border-radius: 0.3125rem;
+    border-radius: 0.3125em;
     margin: auto;
-    margin-top: -10.4375rem;
+    margin-top: -10.4375em;
     position: relative;
     z-index: 100;
     background: #fff;
     width: 90%;
-    max-width: 80rem;
-    padding: 3.125rem 1.25rem;
-    border-top: 0.375rem solid var(--primary);
+    max-width: 82.5em;
+    padding: 3.125em 1.25em;
+    border-top: 0.375em solid var(--primary);
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-    margin-bottom: 3.125rem;
+    margin-bottom: 3.125em;
   }
   .services .card {
     display: block;
     width: 100%;
-    max-width: 22.3125rem;
+    max-width: 22.3125em;
     margin: auto;
-    margin-bottom: 3.125rem;
+    margin-bottom: 3.125em;
   }
   .services .card:last-of-type {
     margin-bottom: 0;
   }
   .services .card picture {
     background: var(--primary);
-    width: 5.5rem;
-    height: 5.5rem;
+    width: 5.5em;
+    height: 5.5em;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-bottom: 1.4375rem;
+    margin-bottom: 1.4375em;
     border-radius: 50%;
   }
   .services .card picture img {
-    width: 3rem;
-    height: 3rem;
+    width: 3em;
+    height: 3em;
   }
   .services .card h2 {
     text-align: center;
-    font-size: 2rem;
-    line-height: 0.84375em;
+    font-size: 2em;
+    line-height: 1.35em;
     font-weight: 700;
     color: #1a1a1a;
-    margin-bottom: 0.8125rem;
+    margin-bottom: 0.65em;
   }
   .services .card p {
     text-align: center;
-    line-height: 1.5rem;
+    line-height: 1.33333333em;
     width: 100%;
     opacity: .7;
   }
@@ -323,16 +323,16 @@
   }
   .services .card {
     margin: 0;
-    max-width: 20.3125rem;
+    max-width: 20.3125em;
   }
 }
 /* Large Desktop */
 @media only screen and (min-width: 1300px) {
   .services {
-    padding: 3.125em 5rem;
+    padding: 3.125em 5em;
   }
   .services .card {
-    max-width: 20rem;
+    max-width: 22.3125em;
   }
 }
 /* Dark mode */
