changing image paths

--- a/src/css/critical.less
+++ b/src/css/critical.less
@@ -257,7 +257,7 @@
 /* Desktop Parallax Effect - 1300px */
 @media only screen and (min-width: 81.25em) {
     #hero {
-        background: url("/assets/images/landing.jpg");
+        background: url("/images/landing-2000w.jpeg");
 		background-size: cover;
 		background-position: center;
 		background-repeat: no-repeat;
