--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,7 +5,7 @@
 <footer id="footer">
     <div class="container">
         <div class="left-section">
-            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo-light.png" alt="logo" width="264" height="78"></a>
+            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/logo-light.png" alt="logo" width="264" height="78"></a>
             <p>
                 Extra content if you need it, if not you can delete this whole p tag. I usually do.
             </p>
@@ -13,25 +13,47 @@
         <div class="right-section">
             <div class="lists">
                 <ul>
-                    <li><h2>Information</h2></li>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="/projects">Projects</a></li>
-                    <li><a href="/testimonials">Reviews</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li>
+                        <h2>Information</h2>
+                    </li>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About Us</a>
+                    </li>
+                    <li>
+                        <a href="/projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="/testimonials">Reviews</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
                 </ul>
                 <ul>
-                    <li><h2>Services</h2></li>
+                    <li>
+                        <h2>Services</h2>
+                    </li>
                     <li>Service1</li>
                     <li>Service2</li>
                     <li>Service4</li>
                     <li>Service5</li>
                 </ul>
                 <ul>
-                    <li><h2>Contact</h2></li>
-                    <li><a href="/contact">First Address Line<br>Denver CO 80206</a></li>
-                    <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
-                    <li><a href="mailto:email@email.com">Click to Email</a></li>
+                    <li>
+                        <h2>Contact</h2>
+                    </li>
+                    <li>
+                        <a href="/contact">First Address Line<br>Denver CO 80206</a>
+                    </li>
+                    <li>
+                        <a href="tel:555-779-4407">T: (555) 779-4407</a>
+                    </li>
+                    <li>
+                        <a href="mailto:email@email.com">Click to Email</a>
+                    </li>
                 </ul>
             </div>
         </div>
