--- a/src/css/about.less
+++ b/src/css/about.less
@@ -305,7 +305,7 @@
             display: block;
             height: 1108/16rem;
             width: 2000/16rem;
-            background: url("..assets/images/cta-squares.svg");
+            background: url("/assets/svgs/cta-squares.svg");
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
