--- a/src/_includes/blog-post-template.html
+++ b/src/_includes/blog-post-template.html
@@ -8,11 +8,11 @@ eleventyComputed:
 ---
 
 {% block preload %}
-<link rel="preload" as="image" href="{{ image }}">
+    <link rel="preload" as="image" href="{{ image }}">
 {% endblock %}
 
 {% block pageCSS %}
-<link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/blog.css">
 {% endblock %}
 
 <!-- ============================================ -->
@@ -25,54 +25,54 @@ eleventyComputed:
         <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
         <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
     </picture>
-  </section>
+</section>
 
 <!-- ============================================ -->
 <!--              Main Blog Content               -->
 <!-- ============================================ -->
 
 <div class="blog-container main-content-wrapper">
-<!--Main content -->
-<div class="main-content">
-    <!-- ============================================ -->
-    <!--                  Blog Article                -->
-    <!-- ============================================ -->
+    <!--Main content -->
+    <div class="main-content">
+        <!-- ============================================ -->
+        <!--                  Blog Article                -->
+        <!-- ============================================ -->
 
-    <article class="blog-article">
-    <!--Main Article Image-->
-    <picture class="blog-mainImage">
-        <img src="{{ image }}" alt="{{ imageAlt }}" width="795" height="400" decoding="async" />
-    </picture>
-    <!--Article Info-->
-    <div class="article-group">
-        <h1 class="blog-h1">{{ blogTitle }}</h1>
-        <div class="blog-authorGroup">
-        <!--Author Image-->
-        <picture class="blog-author-img">
-            <img
-            src="/assets/images/profile.svg"
+        <article class="blog-article">
+            <!--Main Article Image-->
+            <picture class="blog-mainImage">
+                <img src="{{ image }}" alt="{{ imageAlt }}" width="795" height="400" decoding="async"/>
+            </picture>
+            <!--Article Info-->
+            <div class="article-group">
+                <h1 class="blog-h1">{{ blogTitle }}</h1>
+                <div class="blog-authorGroup">
+                    <!--Author Image-->
+                    <picture class="blog-author-img">
+                        <img
+            src="/assets/svgs/profile.svg"
             alt="house"
             width="32"
             height="32"
             decoding="async"
-            />
-        </picture>
-        <span class="blog-author">{{ author }}</span>
-        <span aria-hidden="true" class="blog-dot"></span>
-        <!--Blog Date-->
-        <span class="blog-date">{{ date | postDate }}</span>
-        </div>
+/>
+                    </picture>
+                    <span class="blog-author">{{ author }}</span>
+                    <span aria-hidden="true" class="blog-dot"></span>
+                    <!--Blog Date-->
+                    <span class="blog-date">{{ date | postDate }}</span>
+                </div>
+            </div>
+            <section id="blog-content">
+                {{ content | safe }}
+            </section>
+        </article>
     </div>
-    <section id="blog-content">
-        {{ content | safe }}
-    </section>
-    </article>
-</div>
-<!-- End .main-content -->
+    <!-- End .main-content -->
 
-<!-- ============================================ -->
-<!--                   Sidebar                    -->
-<!-- ============================================ -->
+    <!-- ============================================ -->
+    <!--                   Sidebar                    -->
+    <!-- ============================================ -->
 
-{% include 'featured-post.html' %}
+    {% include 'featured-post.html' %}
 </div>
