--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -14,10 +14,10 @@
         <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
         <a class="logo" aria-label="click to go to home page" href="/">
             <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-            <img class="light" aria-hidden="true" src="/assets/logo-light.png" decoding="async" alt="logo" width="221" height="66">
+            <img class="light" aria-hidden="true" src="/assets/images/logo-light.png" decoding="async" alt="logo" width="221" height="66">
 
             <!--Dark Colored Logo-->
-            <img class="dark" aria-hidden="true" src="/assets/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
+            <img class="dark" aria-hidden="true" src="/assets/images/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
         </a>
 
         <!--Mobile Nav toggle-->
