--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -5,7 +5,7 @@
 <footer id="footer">
     <div class="container">
         <div class="left-section">
-            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/logo-light.png" alt="logo" width="264" height="78"></a>
+            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo-light.png" alt="logo" width="264" height="78"></a>
             <p>
                 Extra content if you need it, if not you can delete this whole p tag. I usually do.
             </p>
