--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -21,24 +21,16 @@
         </a>
 
         <!--Mobile Nav toggle-->
-        <button class="hamburger-menu" aria-expanded="false" aria-controls="navbar-menu">
-            <span class="visually-hidden">Menu</span>
+        <button class="hamburger-menu" aria-expanded="false" aria-label="main navigation" aria-controls="navbar-menu">
             <span aria-hidden="true"></span>
         </button>
 
         <!--Main Nav-->
         <nav id="navbar-menu" aria-label="main navigation">
             <ul>
-                {%- for entry in navPages %}
-                    <li>
-                        <a 
-                        {% if entry.url == page.url %} class="active" {% endif %}
-                        href="{{ entry.url }}"
-                    >
-                            {{ entry.title }}
-                        </a>
-                    </li>
-                {%- endfor %}
+            {%- for entry in navPages %}
+            <li><a {% if entry.url == page.url %}class="active" {% endif %}href="{{ entry.url }}">{{ entry.title }}</a></li>
+            {%- endfor %}
             </ul>
         </nav>
 
