--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -1,6 +1,6 @@
 ---
 layout: 'base.html'
-preloadCSS: '/css/blog.css'
+pageCSS: 'blog.css'
 eleventyComputed:
     description: '{{ blogDescription }}'
     metaTitle: '{{ blogTitle }}'
