--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -25,7 +25,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <!-- Preload image and fonts-->
-        <link rel="preload" as="image" href="/assets/logo-light.png">
+        <link rel="preload" as="image" href="/assets/images/logo-light.png">
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
         <link rel="preload" as="image" href="{{ preloadImg }}"/>
