adding To the Top btn

--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -42,6 +42,8 @@
     <body>
         <!--Screen reader skip main nav-->
         <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main Content</a>
+        <button onclick="topFunction()" id="toTopBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><polyline points="6 15 12 9 18 15" /></svg>
+        </button>
         {% include "header.html" %}
         <main id="main">{{ content | safe }}</main>
         {% include "footer.html" %}
