--- a/src/css/root.less
+++ b/src/css/root.less
@@ -143,8 +143,7 @@
             transition: width .3s;
         }
     }
-    
-    // HIdden Screen reader skip nav button
+    // Hidden Screen reader skip nav button
     .skip {
         position: absolute;
         top: 0;
@@ -152,6 +151,27 @@
         opacity: 0;
         z-index: -1111111;
     }
+    #toTopBtn {
+        display: none; /* Hidden by default */
+          position: fixed; /* Fixed/sticky position */
+          bottom: 2rem; /* Place the button at the bottom of the page */
+          right: 1.5rem; /* Place the button 30px from the right */
+          z-index: 101; /* Make sure it does not overlap */
+          outline: none; /* Remove outline */
+          background-color: var(--primary); /* Set a background color */
+          color: #000; /* Text color */
+          cursor: pointer; /* Add a mouse pointer on hover */
+          width: 3.5rem;
+          height: 3.5rem;
+          border-radius: 50%; /* Rounded corners */
+          border: solid 2px #000;
+          transition: all 0.3s ease 0s;
+          &:hover {
+            background-color: #000; /* Add a dark-grey background on hover */
+            color: #fff;
+            border: solid 2px #fff;
+            }
+        }
 }
 
 /* Reset Margins */
