--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -23,7 +23,7 @@
         <!--Mobile Nav toggle-->
         <button class="hamburger-menu" aria-expanded="false" aria-controls="navbar-menu">
             <span class="visually-hidden">Menu</span>
-            <span aria-hidden="true"></span>
+            <span class="menu-icon" aria-hidden="true"></span>
         </button>
 
         <!--Main Nav-->
