--- a/src/css/blog.less
+++ b/src/css/blog.less
@@ -71,6 +71,52 @@
             }
         }
     }
+    .pagination {
+        padding: .5rem 1.5rem;
+        box-shadow: 0px 20px 39px 0px rgba(0, 0, 0, 0.05);
+        border-radius: 4/16rem;
+        border: 1px solid #ebebeb;
+        .pagination-list {
+            display: flex;
+            gap: 1rem;
+            list-style: none;
+            align-items: center;
+        }
+        .pagination-previous, .pagination-next {
+            display: flex;
+            align-items: center;
+            &.inactive {
+                opacity: 0.6;
+            }
+        }
+        .pagination-previous {
+
+            padding-right: 8/16rem;
+        }
+        .pagination-next {
+
+            padding-left: 8/16rem;
+        }
+        .pagination-numbers {
+            line-height: normal;
+            padding: 2/16rem 8/16rem;
+            border-radius: 4/16rem;
+            &.active {
+                background: var(--primary);
+            }
+        }
+        .pagination-numbers-link {
+            color: var(--bodyHeader);
+            line-height: normal;
+            text-decoration: none;
+        }
+        .pagination-controller-link {
+            display: flex;
+            line-height: normal;
+            align-self: center;
+            font-size: 16/16rem;
+        }
+    }
 }
 
 /*-- -------------------------- -->
